<resources>
    <string name="app_name">Mi Fit</string>
    <string name="share_uninstall_client">"This app hasn't been installed."</string>
    <string name="share_miliao_too_old">"The version of Mi Talk you're using is too old."</string>
    <string name="share_prepare_tips">Preparing data for sharing…</string>
    <string name="share_weibo_label">Weibo</string>
    <string name="share_pengyouquan_label">Moments</string>
    <string name="share_weixin_label">WeChat</string>
    <string name="share_qq_label">QQ</string>
    <string name="share_qq_zone_label">QZone</string>
    <string name="share_miliao_label">Mi Talk</string>
    <string name="share_line_label">Line</string>
    <string name="share_facebook_label">Facebook</string>
    <string name="share_twitter_label">Twitter</string>
    <string name="action_exit">Exit</string>
    <string name="share_to_miliao_target_feeds">Groups</string>
    <string name="share_to_miliao_target_friends">Friends</string>
    <string name="share_to_miliao_target_union">Work out buddies</string>
    <string name="share_miliao_path_selector">Share with</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_loading">Loading</string>
    <string name="come_from_xiaomi_bracelet">Mi Fit</string>
    <string name="picker_menu_done">Done</string>
    <string name="open_gallery">Open gallery</string>
    <string name="scan_label">Put the QRCode in the square to scan.</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Loading ...</string>
    <string name="pull_to_refresh_from_bottom_pull_label">Load more</string>
    <string name="pull_to_refresh_from_bottom_release_label">Pull to refresh</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">Pull to fresh</string>
    <string name="data_not_supported">--</string>
    <string name="running_helper">Route tracker</string>
    <string name="running_no_gps">Use GPS to keep track of your route.</string>
    <string name="running_set_speed">Set speed</string>
    <string name="running_speed">Speed</string>
    <string name="running_speed_with_unit">km/h</string>
    <string name="running_real_time_pace">Pace (km)</string>
    <string name="running_pace">Pace</string>
    <string name="running_pace_lable">Pace</string>
    <string name="running_set_goal">Goal reminder</string>
    <string name="running_set_dist">Distance reminder</string>
    <string name="running_speed_detail">%.2fkm/h</string>
    <string name="running_pace_detail">%s/km</string>
    <string name="running_distance_detail">%.2fkm</string>
    <string name="running_distance_desc">Kilometers</string>
    <string name="running_time_desc">Time</string>
    <string name="running_start">Start</string>
    <string name="running_pause">Pause</string>
    <string name="running_resume">Resume</string>
    <string name="running_stop">Stop</string>
    <string name="running_gps_turnon">Turn on</string>
    <string name="running_gps_cancel">Cancel</string>
    <string name="running_settings">Settings</string>
    <string name="running_history">History</string>
    <string name="running_slider_prompt">>>>Slide right to unlock</string>
    <string name="running_distance">Distance</string>
    <string name="running_distance_unit">Distance(km)</string>
    <string name="running_average_speed">Average</string>
    <string name="running_step">Steps</string>
    <string name="running_altitude">Altitude</string>
    <string name="running_burn">Burn</string>
    <string name="running_start_time">Start</string>
    <string name="running_end_time">End</string>
    <string name="running_history_title">History</string>
    <string name="running_history_date" formatted="false">%d/%d/%d</string>
    <string name="running_history_no_data">No data</string>
    <string name="running_history_no_more_data">No more data</string>
    <string name="running_history_no_data_refresh">Tap to refresh</string>
    <string name="running_history_no_data_refreshing">Refreshing…</string>
    <string name="running_cost_cal">%.1f cal</string>
    <string name="running_prepare_map">Preparing data for sharing…</string>
    <string name="running_prompt_per_kilometer" formatted="false">You have run %s kilometers. It cost %s. The pace is %s.%s</string>
    <string name="running_prompt_great">Great!!</string>
    <string name="running_prompt_come_on">Go!!</string>
    <string name="running_kilometers">km</string>
    <string name="running_per_kilometers">/km</string>
    <string name="running_kilometers_per_hour">km/h</string>
    <string name="running_gps_locating">GPS locating…</string>
    <string name="running_set_pace">Set pace</string>
    <string name="running_lable_miles_fastest">Km fastest</string>
    <string name="running_lable_km_slowest">Km slowest</string>
    <string name="running_share">Share</string>
    <string name="running_watermark">Watermark</string>
    <string name="sport_ranking_desc_poor">%s users placed ahead of you.</string>
    <string name="sport_ranking_desc_normal" formatted="false">You placed &lt;b>%s&lt;/b> out of %s users.</string>
    <string name="sport_ranking_desc_great">Great work!</string>
    <string name="sport_new_record_ropeskipping">New record</string>
    <string name="running_percent_mark">%</string>
    <string name="running_btn_save">Save</string>
    <string name="running_btn_delete">Delete</string>
    <string name="running_btn_confirm">Yes</string>
    <string name="running_btn_continue">No</string>
    <string name="running_short_track_desc">You only ran %d meters. Cancel your run now?</string>
    <string name="running_no_track_desc">Cancel run?</string>
    <string name="running_stop_sport_confirm">Stop activity?</string>
    <string name="running_set_pace_desc">Mi Band will vibrate if your pace is slower than</string>
    <string name="running_gps_poor_signal">Poor GPS signal. Make sure you have an unobstructed view of the sky.</string>
    <string name="running_cal_with_unit">Cal</string>
    <string name="running_cal_desc">Burn</string>
    <string name="running_cal_burnt">%d Cal</string>
    <string name="running_step_frequency">Steps/min</string>
    <string name="running_marathon_cost_time">Marathon time: %s</string>
    <string name="running_label_hint">Title input</string>
    <string name="running_sport_state_sr_tips">Auto paused, switch to resume once running</string>
    <string name="running_auto_pause">Automatic pause detection</string>
    <string name="running_auto_pause_desc">Stop collecting info when run is paused</string>
    <string name="running_gallery">Gallery</string>
    <string name="running_failed_to_get_history_neterror">"Can't connect to the network"</string>
    <string name="running_get_history_no_more_data">No more data</string>
    <string name="running_delete_track_item_confirm">"Records can't be restored."</string>
    <string name="running_backgroud_notification">Running…</string>
    <string name="running_volumn_notice">Low media volum for kilometer speech, please adjust it in Music/Settings</string>
    <string name="running_share_to_mypace">My Pace</string>
    <string name="running_share_to_sport_trace">My sport trace</string>
    <string name="running_share_to_watermark">My watermark photo</string>
    <string name="running_watermark_search_location">\#Loading your location#</string>
    <string name="running_watermark_btn_confirm">OK</string>
    <string name="running_watermark_guide_tips">Touch to move</string>
    <string name="running_no_bracelet_tips">(only available when Mi Band connected)</string>
    <string name="running_contour_track_failed_to_create">Failed to share, please check storage left.</string>
    <string name="running_signal_strong">Strong</string>
    <string name="running_signal_weak">Weak</string>
    <string name="running_signal_none">Off</string>
    <string name="running_name">Running</string>
    <string name="bracelet_info_fw_version">"Firmware: %1$s
Terms of Service: %2$s"</string>
    <string name="bracelet_info_mac_address">"Name: %1$s
Address: %2$s"</string>
    <string name="bracelet_info_deviceid">%s</string>
    <string name="bracelet_info_battery">%s%%</string>
    <string name="app_info_version">"Version: %1$s
Terms of Service: %2$s"</string>
    <string name="exit_app">Exit</string>
    <string name="mili_unbind_question">"Your band won't be able to record your activity and sleep data."</string>
    <string name="mili_unbind_question_content">After you unpair, you can pair with a new band.</string>
    <string name="mili_unbind_question_content_1">The screen unlock function is invalid after unpair.</string>
    <string name="confirm">OK</string>
    <string name="fw_upgrade_failed">"Couldn't update firmware."</string>
    <string name="user_agreement">Terms of Service and Privacy Policy</string>
    <string name="help">Help</string>
    <string name="help_title_0">Is your band too far away?</string>
    <string name="help_info_0">Make sure the band is close to your device throughout the entire pairing process.</string>
    <string name="help_title_1">"Check the band's battery"</string>
    <string name="help_info_1">"Make sure the band is charged and hasn't run out of power."</string>
    <string name="help_title_2">Restart Bluetooth</string>
    <string name="help_info_2">Restart Bluetooth by turning it off and then on again in Settings.</string>
    <string name="help_title_3">Is this band paired with another device?</string>
    <string name="help_info_3">"Make sure your band isn't already paired with another device nearby."</string>
    <string name="fw_upgrade_failed_tips">"Couldn't update band. Some features may not work properly."</string>
    <string name="retry">Retry</string>
    <string name="fw_failed_help_title0">What is firmware?</string>
    <string name="fw_failed_help_tips0">Firmware is the software installed on your band that allows it to talk to your device.</string>
    <string name="fw_failed_help_title1">Why do I need to update firmware?</string>
    <string name="fw_failed_help_tips1">"Updates can improve your band's performance and may provide support for new features."</string>
    <string name="fw_failed_help_title2">Issues updating?</string>
    <string name="fw_failed_help_tips2">"Make sure your band's battery has over 10% charge remaining."</string>
    <string name="action_pop_weixin_enter">Add WeChat</string>
    <string name="start_weixin">Open WeChat</string>
    <string name="unbind">Unpair</string>
    <string name="unbind_short">Unpair</string>
    <string name="bind_weixin_title">Add WeChat Account</string>
    <string name="step1">Step 1) </string>
    <string name="step2">Step 2) </string>
    <string name="bind_weixin_tips_1">Tap Generate to create and save a QR code in Gallery.</string>
    <string name="bind_weixin_tips_2">Tap Open WeChat, then go to Scan QR code and tap Album to select the QR code you saved.</string>
    <string name="gen_qr_code">Generate</string>
    <string name="bin_weixin_device_not_connect">Mi Band not connected</string>
    <string name="fw_low_battery_title">Charge your band now</string>
    <string name="fw_low_battery_tips">"Band's battery must be above 10% before it can update."</string>
    <string name="fw_low_battery_view_help">Help</string>
    <string name="discard">Discard</string>
    <string name="discard_alarm_change">Discard changes?</string>
    <string name="agree">Agree</string>
    <string name="user_agreement_prefix">"To use this product, you must agree to our 
"</string>
    <string name="user_agreement_ux">User Experience Program</string>
    <string name="weight_delete_confirm_title">Delete this entry?</string>
    <string name="weight_delete_confirm_msg">Entry: %s</string>
</resources>