<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_color_blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/help_back_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" style="@style/BackButton" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="34.0dip" android:paddingRight="34.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="40.0dip" android:paddingBottom="@dimen/help_title_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_title_0" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/help_info_0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_title_1" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/help_info_1" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/help_title_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/help_title_margin">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_title_2" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/help_info_2" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/help_title_margin">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_title_3" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_info_3" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>