<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_color_blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/fw_help_screen_home_back" android:text="@string/help" style="@style/BackButton" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="34.0dip" android:paddingRight="34.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/mili_margin" android:paddingBottom="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_title0" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_tips0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_title1" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_tips1" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_title2" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_tips2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>