<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/dialog_empty_area" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:background="#fff4f5f5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="19.0sp" android:textColor="@color/alert_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="@dimen/dialog_title_margin_bottom" android:text="@string/fw_upgrade_failed" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="#ff919394" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/fw_upgrade_failed_tips" />
        </LinearLayout>
        <cn.com.smartdevices.bracelet.ui.widget.DimPanelBottomBar android:layout_width="fill_parent" android:layout_height="wrap_content" app:left_text="@string/help" app:right_text="@string/retry" xmlns:app="http://schemas.android.com/apk/res-auto" />
    </LinearLayout>
</LinearLayout>