<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/dialog_empty_area" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:background="#fff4f5f5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/main_ui_dialog_title_size" android:textColor="@color/main_ui_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="@dimen/dialog_title_margin_bottom" android:text="@string/user_agreement" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/main_ui_content_color" android:gravity="center" android:id="@id/useragreement_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/user_agreement_prefix" />
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/useragreement_ux_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
                <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/main_ui_content_color" android:id="@id/useragreement_ux" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_agreement_ux" />
            </LinearLayout>
        </LinearLayout>
        <cn.com.smartdevices.bracelet.ui.widget.DimPanelBottomBar android:layout_width="fill_parent" android:layout_height="wrap_content" app:left_text="@string/exit_app" app:right_text="@string/agree" app:left_text_color="@color/button_confirm_color" app:right_text_color="@color/button_cancel_color" xmlns:app="http://schemas.android.com/apk/res-auto" />
    </LinearLayout>
</LinearLayout>